traefik/auth-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basicauth
  namespace: default
spec:
  basicAuth:
    secret: basic-auth-passwordfile
    removeHeader: true
