traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-service

spec:
  type: LoadBalancer
  ports:
    - targetPort: web
      port: 80
      name: web
    - targetPort: https
      port: 443
      name: https
    - port: 8080
      targetPort: dashboard
      name: dashboard
  selector:
    app: traefik
